# openterrace-python

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  README.md  comparison.py  example1.py  example7.py  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  requirements.txt  sitemap.xml  test2.py
.github/workflows/: JOSS.yml  PyPi.yml  ci.yml  docs.yml  draft-pdf.yml  generate_docs.yml  perform_tests.yml  publish_testPyPi.yml  pytest.yml  testPyPi.yml  test_compatibility.yml  test_numerical_schemes.yml  tests.yml  upToDateDev.yml
citing/: index.html
contact/: index.html
contributing/: index.html
docs/: citing.md  collaborate.md  contact.md  contributing.md  index.md  installation.md  source_code.md  students.md  theory.md  tutorials.md
docs/_figures/: index.md
docs/contributing/: sending-a-pull-request.md
docs/installation/: linux.md  macos.md  windows.md
docs/overrides/: home.html
docs/project-proposals/: completed-projects.md  contributing-as-a-student.md  index.md
docs/source-code/: advection-schemes-reference.md  diffusion-schemes-reference.md  parameters-reference.md  particle-reference.md  particle_models-reference.md  properties-reference.md  schemes-reference.md  solvers-reference.md  tank-reference.md  tank_models-reference.md
docs/tutorials/: tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md  tutorial_2.md  tutorial_4.md  tutorial_5.md  tutorial_6.md  tutorial_7.md
docs/user-guide/: add-new-fluid-and-material.md  adding-new-fluids-and-solids.md  air.md  equations.md  fluids-and-solids.md  get-started.md  getting-started.md  governing.md  magnetite.md  schemes.md  stone.md  swedish_diabase.md  tutorials.md  validation.md  verification.md  water.md
installation/: index.html
installation/linux/: index.html
installation/macos/: index.html
installation/windows/: index.html
javascripts/: mathjax.js
openterrace/: __init__.py  analytical_functions.py  generate_fluid_data.py  generate_optimised_property_tables.py  generate_property_tables.py  models.py  openterrace.py  parameters.py  particle_models.py  properties.py  schemes.py  solvers.py  tank_models.py  temp.py  test.py  test_functions.py  test_functions_analytical.py  tests_code_verification.py
openterrace/bed_substances/: ATS50.py  ATS58.py  magnetite.py  swedish_diabase.py
openterrace/bedmaterials/: ATS58.py  magnetite.py  swedish_diabase.py
openterrace/convection_schemes/: lax_wendorf_1d.py  upwind_1d.py
openterrace/diffusion_schemes/: central_difference_1d.py  central_difference_2d.py
openterrace/domains/: 1d_cylinder.py  1d_rectangle.py  1d_sphere.py  1d_sphere_2.py  block_1d.py  cylinder_1d.py  hollow_sphere_1d.py  lumped.py  sphere_1d.py
openterrace/fluid_substances/: air.py  sodium-pottasium-22-78.py  water.py
openterrace/fluids/: __init__.py  air.py  water.py
openterrace/shapes/: sphere.py
openterrace/simulation_data/: benchmark1.yaml
openterrace/simulations/: debugging.yaml  example.yaml
openterrace/solids/: stone.py
openterrace/tests/: old.py  test_advection.py  test_advection_schemes.py  test_advection_step_function.py  test_diffusion.py  test_diffusion_schemes.py  test_energy_conservation.py  test_functions.py  test_heat_diffusion_sphere.py  test_heat_diffusion_wall.py
openterrace/tutorials/: example1.py  example2.py  (+4 more)
overrides/: home.html
paper/: paper.bib  paper.md
project-proposals/: index.html
search/: search_index.json
source_code/: index.html
students/: index.html
stylesheets/: extra.css
temp/: generate_property_tables.py  test.py  tmp.py
tests/: test_diffusion.py  test_dummy.py
theory/: index.html
tutorials/: example1.py  example2.py  example3.py  example3a.py  example4.py  example6.py  tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py  tutorial5.py  tutorial6.py  tutorial7.py  tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_5.py  tutorial_air_magnetite_packed_bed.py  tutorial_magnetite_sphere_diffusion_dirichlet_bc.py  tutorial_swedish_diabase_sphere_diffusion_convection_bc.py  tutorial_water_tank_pure_advection.py  validation_grabo.py
(+84 files in other folders)
