[tool.poetry]
name = "openterrace"
description = "OpenTerrace is a pure Python framework for thermal energy storage packed bed simulations"
version = "0.0.0"
authors = [
    "Jakob Hærvig"
]
readme = "README.md"
license = "MIT"

packages = [
    { include = "openterrace"}
]

repository = "https://github.com/OpenTerrace/openterrace-python"
documentation = "https://openterrace.github.io/openterrace-python/"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}"

# Requirements
[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
numba = "*"
scipy = "^1.9.3"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"

# Only used for documentation
[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs-material = "*"
mkdocstrings[python] = "*"
markdown-katex = "*"
pytkdocs[numpy-style] = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"