[tool.poetry]
name = "openterrace"
description = "OpenTerrace: A fast, flexible and extendable Python framework for packed bed thermal energy storage simulations"
version = "0.0.0" # This will be overwritten by the dynamic versioning by Poetry
authors = [
    "Jakob Hærvig"
]
maintainers = [
    "Jakob Hærvig <jakob.haervig@gmail.com>"
]
readme = "README.md"
license = "MIT"

packages = [
    { include = "openterrace"}
]
keywords = [
    "Thermal energy storage",
    "Packed bed",
    "Simulation",
    "Heat transfer",
    "Phase change material",
    "PCM",
    "Python"
]

repository = "https://github.com/OpenTerrace/openterrace-python"
documentation = "https://openterrace.github.io/openterrace-python/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/OpenTerrace/openterrace-python/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}"
latest-tag = true

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.26.4"
numba = "^0.59.0"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
pytest-xdist = "^3.5.0"

# Only used for documentation
[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.12"
mkdocstrings-python = "^1.8.0"
markdown-katex = "^202112.1034"
pytkdocs = "^0.16.1"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"